# backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  dockerfile  pyproject.toml  wsgi.py
.github/workflows/: can-backend-24.yml  main.yml  tab.yml  testing.yml
nginx/: nginx.conf
tag-a-bird-backend/: pyproject.toml
tag-a-bird-backend/tag_a_bird_backend/: app.py  example.env  models.py  test_models.py
tag-a-bird-backend/tests/: test_tag_a_bird_backend.py
tag_a_bird_backend/: Dockerfile  MANIFEST.in  __init__.py  alembic.ini  app.py  ca-certificate.cer  config.py  database.py  db.py  example.env  helpers.py  migrate.py  models.py  requirements.txt  routes.py  setup.py  tailwind.config.js  test_models.py  validate_email.py
tag_a_bird_backend/.github/workflows/: github-actions-demo.yml
tag_a_bird_backend/alembic/: env.py
tag_a_bird_backend/alembic/versions/: 0ad55934096b_auto_generated_migration.py  201aa151b0a2_initial_migration.py  550f6986c6da_.py  6ef2e5fb5e2f_.py  8ae39da4a0bb_auto_generated_migration.py  92e15f67228b_create_account_table.py  9f48dca20a71_.py  e304e8a0b597_auto_generated_migration.py
tag_a_bird_backend/blueprints/admin/: routes.py
tag_a_bird_backend/blueprints/annotation/: routes.py
tag_a_bird_backend/blueprints/auth/: routes.py
tag_a_bird_backend/main/: __init__.py  app.py
tag_a_bird_backend/migrations/: env.py
tag_a_bird_backend/notroutes/: routes.py
tag_a_bird_backend/routes_module/: routes.py
tag_a_bird_backend/static/: dropDown.js  flags.py  output.css  species.py
tag_a_bird_backend/templates/: about.html  annotate.html  base.html  home.html
tag_a_bird_backend/tests/: conftest.py  data.sql  test_auth.py  test_config.py  test_endpoints.py  test_factory.py  test_helper.py  test_models.py  test_routes.py
tag_a_bird_backend/utils/: blueprint.py  config.py  helpers.py  models.py  routes.py  validate_email.py
threat_model/: tag-a-bird_threat_model.json
(+10 files in other folders)
