[tool.poetry]
name = "tag-a-bird-backend"
version = "0.1.0"
description = ""
authors = ["Can"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
Flask-RESTful = "^0.3.9"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
Flask-HTTPAuth = "^4.7.0"
Flask-JWT-Extended = "^4.4.4"
PyJWT = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
