[tool.poetry]
name = "tag-a-bird-backend"
version = "0.1.0"
description = ""
authors = ["Can"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
Flask-RESTful = "^0.3.9"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
Flask-HTTPAuth = "^4.7.0"
Flask-JWT-Extended = "^4.4.4"
PyJWT = "^2.5.0"
Flask-Toastr = "^0.5.8"
Flask-Login = "^0.6.2"
requests = "^2.28.1"
alembic = "^1.8.1"
pip = "^22.3.1"
Flask-Scrypt = "^0.1.3.6"
Flask-Security = "^3.0.0"
email-validator = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
